--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
     <html>
         <head>
             <title>Geosoftware I - Uebung 1</title>
+            <script type="text/javascript" src="data/polygon.js"></script>
+            <script type="text/javascript" src="data/route.js"></script>
         </head>
         <body>
+            <script>
+                console.log(polygon)
+                console.log(route)
+            </script>
         </body>
 </html> 
