Distance between to Point
Abilty to get two points and the distance between them.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
     <html>
         <head>
+            <meta charset="UTF-8">
             <title>Geosoftware I - Uebung 1</title>
             <script type="text/javascript" src="data/polygon.js"></script>
             <script type="text/javascript" src="data/route.js"></script>
         </head>
         <body>
             <script>
-                console.log(polygon)
-                console.log(route)
+                console.log(polygon); //uses logitute and latitute
+                console.log(route); //uses logitute and latitute
+                
+                var pointa = route[0];
+                var pointb = route[1];
+
+                console.log(Array.of(pointa));
+                console.log(Array.of(pointb));
+
+                console.log(distance(pointa[1], pointa[0], pointb[1], pointb[0]));
+
+                function distance(lat1, lon1, lat2, lon2) {
+                    var p = 0.017453292519943295;    // Math.PI / 180
+                    var c = Math.cos;
+                    var a = 0.5 - c((lat2 - lat1) * p)/2 + 
+                    c(lat1 * p) * c(lat2 * p) * (1 - c((lon2 - lon1) * p))/2;
+
+                    return 12742 * Math.asin(Math.sqrt(a)); // 2 * R; R = 6371 km
+                }
+
+                function deg2rad(deg) {
+                    return deg * (Math.PI/180)
+                }
             </script>
         </body>
 </html> 
