--- a/index.html
+++ b/index.html
@@ -14,23 +14,50 @@
                 var pointa = route[0];
                 var pointb = route[1];
 
+                
+
                 console.log(Array.of(pointa));
                 console.log(Array.of(pointb));
 
-                console.log(distance(pointa[1], pointa[0], pointb[1], pointb[0]));
+                console.log(pointInPolygon(pointa, polygon));
 
-                function distance(lat1, lon1, lat2, lon2) {
+                console.log(distanceBetweenTwoPoints(pointa[1], pointa[0], pointb[1], pointb[0]));
+
+                function pointLIsteToPointArray (pointList) {
+                    pointArray = Array.of(pointList);
+                    return pointArray;
+                }
+
+                function distanceBetweenTwoPoints(lat1, lon1, lat2, lon2) {
                     var p = 0.017453292519943295;    // Math.PI / 180
                     var c = Math.cos;
                     var a = 0.5 - c((lat2 - lat1) * p)/2 + 
                     c(lat1 * p) * c(lat2 * p) * (1 - c((lon2 - lon1) * p))/2;
 
-                    return 12742 * Math.asin(Math.sqrt(a)); // 2 * R; R = 6371 km
+                    return 12742 * Math.asin(Math.sqrt(a)); // 2 * R; R = 6371 km !!Must be changenged to conform to WGS-84
                 }
 
-                function deg2rad(deg) {
-                    return deg * (Math.PI/180)
+                function degToRad(deg) {
+                    return deg * (Math.PI/180);
                 }
+
+                function pointInPolygon(point, polygon) {
+                    // ray-casting algorithm based on
+                    // http://www.ecse.rpi.edu/Homepages/wrf/Research/Short_Notes/pnpoly.html
+
+                    var x = point[0], y = point[1];
+
+                    var inside = false;
+                    for (var i = 0, j = polygon.length - 1; i < polygon.length; j = i++) {
+                        var xi = polygon[i][0], yi = polygon[i][1];
+                        var xj = polygon[j][0], yj = polygon[j][1];
+
+                        var intersect = ((yi > y) != (yj > y)) && (x < (xj - xi) * (y - yi) / (yj - yi) + xi);
+
+                        if (intersect) inside = !inside;
+                    }
+                    return inside;
+                };
             </script>
         </body>
 </html> 
