Switched to Meters
Switched measurement to meters

--- a/index.html
+++ b/index.html
@@ -10,14 +10,9 @@
             <script>
                 console.log(polygon); //uses logitute and latitute
                 console.log(route); //uses logitute and latitute
-                
-                var pointa = route[0];
-                var pointb = route[1];
 
-                
-
-                console.log(Array.of(pointa));
-                console.log(Array.of(pointb));
+                var pointa = route[0]
+                var pointb = route[1]
 
                 console.log(pointInPolygon(pointa, polygon));
 
@@ -29,12 +24,11 @@
                 }
 
                 function distanceBetweenTwoPoints(lat1, lon1, lat2, lon2) {
-                    var p = 0.017453292519943295;    // Math.PI / 180
+                    var p = 0.017453292519943295;    // Math.PI/180
                     var c = Math.cos;
-                    var a = 0.5 - c((lat2 - lat1) * p)/2 + 
-                    c(lat1 * p) * c(lat2 * p) * (1 - c((lon2 - lon1) * p))/2;
+                    var a = 0.5 - c((lat2 - lat1) * p)/2 + c(lat1 * p) * c(lat2 * p) * (1 - c((lon2 - lon1) * p))/2;
 
-                    return 12742 * Math.asin(Math.sqrt(a)); // 2 * R; R = 6371 km !!Must be changenged to conform to WGS-84
+                    return (12742 * Math.asin(Math.sqrt(a))) * 1000; // 2 * R; R = 6371 km !!Must be changenged to conform to WGS-84
                 }
 
                 function degToRad(deg) {
