Geojsons added and minor changes

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                         //both verticies are inside the polygon
                         if(pointInPolygon(path[i], polygon) && pointInPolygon(path[i+1], polygon)){
                         intersectingPaths.push([path[i],path[i+1]]);
+                        //one verticy is inside the polygon
                     }
                     //one point is inside the polygon
                     }
