Last commit of day 1
This is the last commit of day 1.

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
                 //console.log("The outward part of the given segment is: ", splitSegment(l3, test_polygon));
 
-                //console.log(rotationDirection(p1, p2, p4)) // -1
-                //console.log(rotationDirection(p1, p2, p3)) // 1
-                console.log(rotationDirection(p1, p2, p5)) // 0
+                //console.log(getDirection(p1, p2, p4)) // -1 right
+                //console.log(getDirection(p1, p2, p3)) // 1 left
+                //console.log(getDirection(p1, p2, p5)) // 0 on the segment
 
                 //Run
                 //console.log(getIntersectingSegments(route, polygon));
