New segment extraction
Altered the algorithm for extracting the segments of the path

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 //Run
                 //console.log(getIntersectingSegments(route, polygon));
                 //console.log(getContainedSegments(route, polygon));
+                console.log(getSegments(route, polygon))
 
 
             </script>
