--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
                 var test_polygon = [[0.5, 0],[0.5, 5],[3, 5],[3, 0],[0.5, 0]];
 
-                //console.log("Intersection between line 1 and line 2 is at lon/lat: ", 
-                //lineIntersection(l1[0][0], l1[0][1], l1[1][0], l1[1][1], l2[0][0], l2[0][1], l2[1][0], l2[1][1]));
+                console.log("Intersection between line 1 and line 2 is at lon/lat: ", 
+                lineIntersection(p1, p2, p3, p4));
 
                 //console.log("Is p2 inside the test_polygon? ", pointInPolygon(p2, test_polygon)); //inside
                 //console.log("Is p4 inside the test_polygon? ", pointInPolygon(p4, test_polygon)); //outside
@@ -48,8 +48,6 @@
                 //console.log(getDirection(p1, p2, p5)) // 0 on the segment
 
                 //Run
-                //console.log(getIntersectingSegments(route, polygon));
-                //console.log(getContainedSegments(route, polygon));
                 console.log(getSegments(route, polygon))
 
 
