Some minor changes
test test test

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 var pointb = route[1]
 
                 //calculate distance between the two extracted points
-                //console.log("Distance between Point a and Point b: ", distanceBetweenTwoPoints(pointa[1], pointa[0], pointb[1], pointb[0]));
+                console.log("Distance between Point a and Point b: ", distanceBetweenTwoPoints(pointa, pointb));
 
                 //Geometry test
                 var p1 = [1, 0];
@@ -52,9 +52,6 @@
 
                 //Run
                 //console.log(getSegments(route, polygon));
-                
-
-
             </script>
         </body>
 </html> 
