Last Commit of day 2
Last commit for day 2

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 var pA = [7.60285, 51.96427];
                 var pB = [7.60492, 51.96441];
                 var lA = [pA, pB];
-                console.log(splitSegment(lA, polygon));
+                console.log(getSegments(lA, polygon));
 
                 //Run
                 //console.log(getSegments(route, polygon));
