getSegments function working
getSegments function working (finally)

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                 var pA = [7.60285, 51.96427];
                 var pB = [7.60492, 51.96441];
                 var lA = [pA, pB];
-                console.log(getSegments(lA, polygon));
+                //console.log("cut segments: ", getSegments(lA, polygon));
 
                 //Run
-                //console.log(getSegments(route, polygon));
+                console.log("cut segments: ", getSegments(route, polygon));
             </script>
         </body>
 </html> 
