--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 </tBody>
             </table>
             <script>
+				/*
                 var segments = getSegments(route, polygon);
                 var tableData = [];
                 for(var i = 0; i < segments.length; i++) {
@@ -50,6 +51,8 @@
                     totalLength += tableData[i][2];
                 }
                 console.log(numberSegments, totalLength.toFixed(2));
+                console.log(getInsideOutsidePaths(route, polygon));
+				*/
             </script>
         </body>
 </html> 
