--- a/index.html
+++ b/index.html
@@ -45,16 +45,17 @@
             <h5>Gesamtlänge:</h5>
             <table>
                 <tr>
+                    <th>inside or outside</th>
                     <th>Startpoint (lon/lat)</th>
                     <th>Endpoint (lon/lat)</th>
                     <th>Length in Meters</th>
-                    <th>inside or outside</th>
                 </tr>
                 <tBody id="tableBody3">
                 </tBody>
             </table>
 
             <script>
+                "use strict";
                 //Table 1
                 var segments = getSegments(route, polygon);
                 var tableData1 = [];
@@ -121,7 +122,36 @@
 
                 //Table 3
                 var segments = getInsideOutsidePaths(route, polygon);
+                var table3 = document.getElementById("tableBody3");
+                console.log(segments);
+                var path = [];
                 var paths = [];
+                var tableData3 = [];
+                for(var i = 0; i < segments.length-1; i++) {
+                    if(segments[i][2] == segments[i+1][2]) {
+                        path.push(segments[i]);
+                    }
+                    if(segments[i][2] != segments[i+1][2]) {
+                        paths.push(path);
+                        path = [];
+                    }
+                }
+                paths.push(path);
+                console.log(paths);
+                for(var i = 0; i < paths.length-1; i++) {
+                    tableData3.push(aggregatePath(paths[i]));
+                }
+                tableData3.sort((a, b) => a[3] - b[3]);
+                for(var i = 0; i < tableData3.length; i++) {
+                    var row =  `<tr>
+                        <td>${tableData3[i][0]}</td>
+                        <td>${tableData3[i][1]}</td>
+                        <td>${(tableData3[i][2])}</td>
+                        <td>${(tableData3[i][3])}</td>
+                    </tr>`
+                    table3.innerHTML += row;
+                }
+                
             </script>
         </body>
 </html> 
