--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </table>
 
             <h3>Table 3 - all paths (not cut at intersection)</h3>
-            <h5>Gesamtlänge:</h5>
+            <h5 id="gesamtlaenge3"></h5>
             <table>
                 <tr>
                     <th>inside or outside</th>
@@ -57,7 +57,7 @@
             <script>
                 "use strict";
                 //Table 1
-                var segments = getSegments(route, polygon);
+                var segments = getOutsideSegments(route, polygon);
                 var tableData1 = [];
                 for(var i = 0; i < segments.length; i++) {
                     var length = distanceBetweenTwoPoints(segments[i][0], segments[i][1]);
@@ -122,36 +122,43 @@
 
                 //Table 3
                 var segments = getInsideOutsidePaths(route, polygon);
-                var table3 = document.getElementById("tableBody3");
                 console.log(segments);
+                var table3 = document.getElementById("tableBody3");
                 var path = [];
                 var paths = [];
                 var tableData3 = [];
+                var lastSegment = segments[segments.length-1];
                 for(var i = 0; i < segments.length-1; i++) {
                     if(segments[i][2] == segments[i+1][2]) {
                         path.push(segments[i]);
                     }
                     if(segments[i][2] != segments[i+1][2]) {
+                        path.push(segments[i]);
                         paths.push(path);
                         path = [];
                     }
                 }
+                path.push(lastSegment);
                 paths.push(path);
-                console.log(paths);
-                for(var i = 0; i < paths.length-1; i++) {
+                for(var i = 0; i < paths.length; i++) {
                     tableData3.push(aggregatePath(paths[i]));
                 }
                 tableData3.sort((a, b) => a[3] - b[3]);
+                console.log(tableData3);
                 for(var i = 0; i < tableData3.length; i++) {
                     var row =  `<tr>
                         <td>${tableData3[i][0]}</td>
                         <td>${tableData3[i][1]}</td>
                         <td>${(tableData3[i][2])}</td>
-                        <td>${(tableData3[i][3])}</td>
+                        <td>${(tableData3[i][3]).toFixed(2)}</td>
                     </tr>`
                     table3.innerHTML += row;
                 }
-                
+                var totalLength = 0;
+                for(var i = 0; i < segments.length; i++) {
+                    totalLength += segments[i][3];
+                }
+                document.getElementById('gesamtlaenge3').innerHTML = "Gesamtlänge: " +  totalLength.toFixed(2) + "m"; 
             </script>
         </body>
 </html> 
